tests/compile_errors/undefined_variable.rk
// SPDX-License-Identifier: (MIT OR Apache-2.0)
// ERROR: using undefined variable
// Expected: resolve error E0200

func main() {
    println(x.to_string())
}
